# genshin-builds

./: .gitignore  LICENSE  README.md  constants.py  main.py  pyproject.toml  scraper.py  setup_local_files.py
tests/: test_anemo.py
