[project]
name = "genshin-builds"
version = "0.0.1"
description = "This is a CLI that aims to scrape https://docs.google.com/spreadsheets/d/1gNxZ2xab1J6o1TuNVWMeLOZ7TPOqrsf3SshP5DLvKzI/htmlview in hopes of escaping the horrible UX of a spreadsheet"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "niquests>=3.19.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "types-beautifulsoup4>=4.12.0.20250516",
]

[tool.poe.tasks]
"setup:files" = "uv run setup_local_files.py"
test = "uv run python -m unittest discover -t . -s ./tests/ -v"
"test:silent" = "uv run python -m unittest discover -t . -s ./tests/"

[tool.ruff.lint]
extend-select = ["ISC001", "ISC002"]

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false